# luagl

./: CMakeLists.txt  dist.info
mak.vc9/: luagl.sln  luagl_dll.vcproj  luagl_lib.vcproj  luaglu_dll.vcproj  luaglu_lib.vcproj
src/: Makefile  README  config.mak  luagl.c  luagl.def  luagl_util.c  luagl_util.h  luaglu.def  luaglu.mak  make_uname.bat
